@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Added loading indicator in shards view.
+
  - Do not automatically execute the query when clicking on 
    the "Query Table" button in the table view.
 
